--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,12 @@
 			<scope>provided</scope>
 		</dependency>
 		
+		<dependency>
+    			<groupId>org.apache.maven.plugins</groupId>
+    			<artifactId>maven-deploy-plugin</artifactId>
+			<version>3.0.0</version>
+		</dependency>
+		
 	</dependencies>
 	<distributionManagement>
 	    <repository>
